assignemnt 3 spacing fix

--- a/assignments/assignment3/styles.css
+++ b/assignments/assignment3/styles.css
@@ -1,5 +1,38 @@
 /*Structure*/
-
+body{
+    background-color: lemonchiffon;
+}
+#main-h1 {
+    color:darkcyan;
+}
+#main-header {
+    background-color: pink;
+}
+#main-content {
+    background-color: lightsalmon;
+}
+#main-footer {
+    background-color: peachpuff;
+}
+formatted-area {
+    padding: 5px;
+    margin: auto;
+}
+/*Main Navigation*/
+#main-nav ul{
+    padding-left: 0px;
+}
+#main-nav li {
+    list-style-type: none;
+    display: inline-block;
+}
+#main-nav a{
+    text-decoration: none;
+    color: black;
+}
+#main-nav a:hover{
+    border-bottom: 3px solid darkcyan;
+}
 /*Typography*/
 body{
     font-family: Arial, Helvetica, sans-serif;
